@@ -3,8 +3,9 @@ TODO
 1. Algoritmus odstraneni opakujicich se mezer presunout do nejakeho Text::*
    modulu.
    Text::Outdent - otestovat muj algoritmus oproti tomuto.
-2. Funkce pro zjisteni poctu prikladu v modulu.
 3.
 
 Applied
 =======
+2. Funkce pro zjisteni poctu prikladu v modulu.
+OK [20120515] skim
