@@ -1,5 +1,6 @@
 0.03
 - New version of build system.
+- Implement sections() subroutine.
 
 0.02 (August 1, 2011)
 - Add check for noexistent Perl module. Add test for it.
